2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* shared/startup/bspstart.c: Removed excess /*, replaced
	#ifdef checks for mpc8240 by #ifdef mvme2100; eventually
	there should be run-time checks.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* shared/motorola/motorola.c: removed excess initializer
	elements.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* shared/irq/irq.h, shared/irq/irq.c, shared/irq/irq_init.c,
	shared/irq/irq_supp.h (added):
	Removed 'is_processor_irq()' from irq.c; the BSP routines
	BSP_enable_irq_at_pic()/BSP_disable_irq_at_pic() are required
	to ignore processor irqs anyways. Removed
	all BSP-defined constants from irq.c. This makes irq.c (almost)
	binary-compatible among BSPs (ultimate goal is making 'shared'
	a library).
	Added a header (irq_supp.h) defining the interface between
	the generic interrupt manager (irq.c) and the routines it
	requires to be supplied by the BSP (eventually, these
	should go into rtems/irq.h).

2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* shared/irq/irq.h, shared/irq/irq_init.c: Removed the definition
	of ASM_IRQ_VECTOR_BASE; this symbol was only use to
	initialize the irqBase member of the rtems_irq_global_settings
	struct. However, irqBase is an rtems_irq_symbolic_name,
	so using BSP_LOWEST_OFFSET is more appropriate.

2007-11-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/startup/bspstart.c: Eliminate PowerPC specific elements from
	the CPU Table. They have been replaced with variables named bsp_XXX
	as needed.

2007-11-29	Till Straumann <strauman@slac.stanford.edu>

	* Makefile.am, shared/flash, shared/flash/flash.c,
	shared/flash/flashPgm.h, shared/flash/flashPgmPvt.h,
	shared/flash/intelFlash.c, shared/flash/spansionFlash.c:
	Added flash programmer API, implementation and chip drivers
	for some intel + spansion flash chips (as found on mvme5500,
	mvme6100 and mvme3100 boards).
	A more appopriate place would probably be libchip but